# hnetcdf

./: .gitignore  .travis.yml  C2HS.hs  CHANGELOG.markdown  LICENSE  README.markdown  README.md  hnetcdf.cabal  stack.yaml
Data/: NetCDF.hs
Data/NetCDF/: HMatrix.hs  Metadata.hs  PutGet.hs  Raw.chs  Raw.hs  Repa.hs  Storable.hs  Store.hs  Types.hs  Utils.hs  Vector.hs
Data/NetCDF/Raw/: Attributes.chs  Base.chs  NetCDF4.chs  PutGet.hs  PutGetVar.chs  PutGetVar1.chs  PutGetVarA.chs  PutGetVarM.chs  PutGetVarS.chs  Utils.hs
examples/: example1.hs  example2.hs  example3.hs  z500-short.nc
test/: test-get.hs  test-hmatrix.hs  test-put.hs  test-raw-attributes.hs  test-raw-get-put.hs  test-raw-metadata.hs  test-raw-var1.hs  test-raw.hs  tst-raw-get-put.nc  tst-raw-get-put.ncgen  tst-var1.nc  tst-var1.ncgen  tst.nc
