name:                hnetcdf
version:             0.1.0.0
synopsis:            Haskell NetCDF library
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ian Ross
maintainer:          ian@skybluetrades.net
copyright:           Copyright (2013) Ian Ross
category:            Data
build-type:          Simple
cabal-version:       >=1.8

Library
  exposed-modules:     Data.NetCDF
                       Data.NetCDF.Metadata
                       Data.NetCDF.Storable
                       Data.NetCDF.Store
                       Data.NetCDF.Types
                       Data.NetCDF.Utils
                       Data.NetCDF.Raw
                       Data.NetCDF.Raw.Base
                       Data.NetCDF.Raw.PutGet
                       Data.NetCDF.Raw.PutGetVar1
                       Data.NetCDF.Raw.Attributes
                       Data.NetCDF.Raw.NetCDF4
                       Data.NetCDF.Raw.Utils
  build-depends:       base          < 5,
                       containers,
                       either,
                       filepath,
                       vector,
--        >= 0.10 && < 0.11,
                       repa,
--          >= 3.2 && < 3.3
                       transformers
  build-tools:         c2hs
  extra-libraries:     netcdf

Test-Suite test-raw-metadata
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-raw-metadata.hs
  build-depends:       hnetcdf,
                       base,
                       containers,
                       vector,
-- >= 0.10 && < 0.11,
                       repa,
-- >= 3.2 && < 3.3,
                       test-framework,
                       test-framework-hunit,
                       test-framework-quickcheck2 >= 0.3,
                       HUnit,
                       QuickCheck
  extra-libraries:     netcdf

Test-Suite test-raw-get-put
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-raw-get-put.hs
  build-depends:       hnetcdf,
                       base,
                       vector,
-- >= 0.10 && < 0.11,
                       repa,
-- >= 3.2 && < 3.3,
                       test-framework,
                       test-framework-hunit,
                       test-framework-quickcheck2 >= 0.3,
                       HUnit,
                       QuickCheck,
                       directory
  extra-libraries:     netcdf

Test-Suite test-raw-attributes
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-raw-attributes.hs
  build-depends:       hnetcdf,
                       base,
                       vector,
-- >= 0.10 && < 0.11,
                       repa,
-- >= 3.2 && < 3.3,
                       test-framework,
                       test-framework-hunit,
                       test-framework-quickcheck2 >= 0.3,
                       HUnit,
                       QuickCheck,
                       directory
  extra-libraries:     netcdf

Test-Suite test-get
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-get.hs
  build-depends:       hnetcdf,
                       base,
                       vector,
-- >= 0.10 && < 0.11,
                       repa,
-- >= 3.2 && < 3.3,
                       test-framework,
                       test-framework-hunit,
                       test-framework-quickcheck2 >= 0.3,
                       HUnit,
                       QuickCheck,
                       directory
  extra-libraries:     netcdf

