name:                hnetcdf
version:             0.1.0.0
synopsis:            Haskell NetCDF library
description:
  Bindings to the Unidata NetCDF library, along with a higher-level
  Haskell interface that attempts to provide container polymorphic
  data access (initially just Storable vectors and Repa arrays).
license:             BSD3
license-file:        LICENSE
author:              Ian Ross
maintainer:          ian@skybluetrades.net
copyright:           Copyright (2013) Ian Ross
category:            Data
build-type:          Simple
cabal-version:       >=1.8
homepage:            https://github.com/ian-ross/hnetcdf

Library
  exposed-modules:     Data.NetCDF
                       Data.NetCDF.Metadata
                       Data.NetCDF.PutGet
                       Data.NetCDF.Storable
                       Data.NetCDF.Store
                       Data.NetCDF.Types
                       Data.NetCDF.Utils
                       Data.NetCDF.Raw
                       Data.NetCDF.Raw.Base
                       Data.NetCDF.Raw.PutGet
                       Data.NetCDF.Raw.Attributes
                       Data.NetCDF.Raw.NetCDF4
                       Data.NetCDF.Raw.Utils
  build-depends:       base                        >= 4.3      && < 5,
                       containers                  >= 0.5      && < 0.6,
                       either                      >= 3.4.1    && < 3.5,
                       errors                      >= 1.4.2    && < 1.5,
                       filepath                    >= 1.3      && < 1.4,
                       vector                      >= 0.10     && < 0.11,
                       repa                        >= 3.2.3    && < 3.3,
                       transformers                >= 0.3      && < 0.4
  build-tools:         c2hs
  extra-libraries:     netcdf

Test-Suite test-raw-metadata
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-raw-metadata.hs
  build-depends:       hnetcdf,
                       base                        >= 4.3      && < 5,
                       containers                  >= 0.5      && < 0.6,
                       vector                      >= 0.10     && < 0.11,
                       repa                        >= 3.2.3    && < 3.3,
                       test-framework              >= 0.8      && < 0.9,
                       test-framework-hunit        >= 0.3      && < 0.4,
                       test-framework-quickcheck2  >= 0.3      && < 0.4,
                       HUnit                       >= 1.2.5    && < 1.3,
                       QuickCheck                  >= 2.5.1    && < 2.6
  extra-libraries:     netcdf

Test-Suite test-raw-get-put
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-raw-get-put.hs
  build-depends:       hnetcdf,
                       base                        >= 4.3      && < 5,
                       containers                  >= 0.5      && < 0.6,
                       vector                      >= 0.10     && < 0.11,
                       repa                        >= 3.2.3    && < 3.3,
                       test-framework              >= 0.8      && < 0.9,
                       test-framework-hunit        >= 0.3      && < 0.4,
                       test-framework-quickcheck2  >= 0.3      && < 0.4,
                       HUnit                       >= 1.2.5    && < 1.3,
                       QuickCheck                  >= 2.5.1    && < 2.6,
                       directory                   >= 1.2      && < 1.3
  extra-libraries:     netcdf

Test-Suite test-raw-attributes
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-raw-attributes.hs
  build-depends:       hnetcdf,
                       base                        >= 4.3      && < 5,
                       containers                  >= 0.5      && < 0.6,
                       vector                      >= 0.10     && < 0.11,
                       repa                        >= 3.2.3    && < 3.3,
                       test-framework              >= 0.8      && < 0.9,
                       test-framework-hunit        >= 0.3      && < 0.4,
                       test-framework-quickcheck2  >= 0.3      && < 0.4,
                       HUnit                       >= 1.2.5    && < 1.3,
                       QuickCheck                  >= 2.5.1    && < 2.6,
                       directory                   >= 1.2      && < 1.3
  extra-libraries:     netcdf

Test-Suite test-get
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-get.hs
  build-depends:       hnetcdf,
                       base                        >= 4.3      && < 5,
                       containers                  >= 0.5      && < 0.6,
                       errors                      >= 1.4.2    && < 1.5,
                       vector                      >= 0.10     && < 0.11,
                       repa                        >= 3.2.3    && < 3.3,
                       test-framework              >= 0.8      && < 0.9,
                       test-framework-hunit        >= 0.3      && < 0.4,
                       test-framework-quickcheck2  >= 0.3      && < 0.4,
                       HUnit                       >= 1.2.5    && < 1.3,
                       QuickCheck                  >= 2.5.1    && < 2.6,
                       directory                   >= 1.2      && < 1.3
  extra-libraries:     netcdf

