name: hnetcdf
version: 0.3.0.0
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (2013) Ian Ross
maintainer: ian@skybluetrades.net
homepage: https://github.com/ian-ross/hnetcdf
synopsis: Haskell NetCDF library
description:
    Bindings to the Unidata NetCDF library, along with a higher-level
    Haskell interface that attempts to provide container polymorphic
    data access (initially just Storable vectors and Repa arrays).
category: Data
author: Ian Ross
data-files:
    test/tst-raw-get-put.nc
    test/tst-bathymetry.nc
extra-source-files:
    README.markdown
    CHANGELOG.markdown

source-repository head
    type: git
    location: https://github.com/ian-ross/hnetcdf

library
    build-depends:
        base >=4.3 && <5,
        containers >=0.5.5.1 && <0.6,
        either >=4.3.3.2 && <4.4,
        errors >=1.4.7 && <1.5,
        filepath >=1.3.0.2 && <1.4,
        hmatrix >=0.16.1.5 && <0.17,
        repa >=3.3.1.2 && <3.4,
        transformers >=0.3.0.0 && <0.4,
        vector >=0.10.12.2 && <0.11
    exposed-modules:
        Data.NetCDF
        Data.NetCDF.Vector
        Data.NetCDF.Repa
        Data.NetCDF.HMatrix
        Data.NetCDF.Metadata
        Data.NetCDF.PutGet
        Data.NetCDF.Storable
        Data.NetCDF.Store
        Data.NetCDF.Types
        Data.NetCDF.Utils
        Data.NetCDF.Raw
        Data.NetCDF.Raw.Base
        Data.NetCDF.Raw.PutGet
        Data.NetCDF.Raw.Attributes
        Data.NetCDF.Raw.Utils
    build-tools: c2hs -any
    extra-libraries:
        netcdf
    ghc-options: -Wall

executable example1
    build-depends:
        hnetcdf -any,
        base >=4.3 && <5,
        containers >=0.5.5.1 && <0.6,
        vector >=0.10.12.2 && <0.11
    main-is: example1.hs
    hs-source-dirs: examples

executable example2
    build-depends:
        hnetcdf -any,
        base >=4.3 && <5,
        containers >=0.5.5.1 && <0.6,
        vector >=0.10.12.2 && <0.11,
        repa >=3.3.1.2 && <3.4
    main-is: example2.hs
    hs-source-dirs: examples

executable example3
    build-depends:
        hnetcdf -any,
        base >=4.3 && <5,
        containers >=0.5.5.1 && <0.6,
        vector >=0.10.12.2 && <0.11,
        hmatrix >=0.16.1.5 && <0.17
    main-is: example3.hs
    hs-source-dirs: examples

test-suite test-raw-metadata
    build-depends:
        hnetcdf -any,
        base >=4.3 && <5,
        containers >=0.5.5.1 && <0.6,
        vector >=0.10.12.2 && <0.11,
        repa >=3.3.1.2 && <3.4,
        test-framework >=0.3,
        test-framework-hunit -any,
        test-framework-quickcheck2 >=0.3,
        HUnit -any,
        QuickCheck >=2.7.6 && <2.8
    type: exitcode-stdio-1.0
    main-is: test-raw-metadata.hs
    extra-libraries:
        netcdf
    hs-source-dirs: test
test-suite test-raw-get-put
    build-depends:
        hnetcdf -any,
        base >=4.3 && <5,
        containers >=0.5.5.1 && <0.6,
        vector >=0.10.12.2 && <0.11,
        repa >=3.3.1.2 && <3.4,
        directory >=1.1,
        test-framework >=0.3,
        test-framework-hunit -any,
        test-framework-quickcheck2 >=0.3,
        HUnit -any,
        QuickCheck >=2.7.6 && <2.8
    type: exitcode-stdio-1.0
    main-is: test-raw-get-put.hs
    extra-libraries:
        netcdf
    hs-source-dirs: test
test-suite test-raw-attributes
    build-depends:
        hnetcdf -any,
        base >=4.3 && <5,
        containers >=0.5.5.1 && <0.6,
        vector >=0.10.12.2 && <0.11,
        repa >=3.3.1.2 && <3.4,
        directory >=1.1,
        test-framework >=0.3,
        test-framework-hunit -any,
        test-framework-quickcheck2 >=0.3,
        HUnit -any,
        QuickCheck >=2.7.6 && <2.8
    type: exitcode-stdio-1.0
    main-is: test-raw-attributes.hs
    extra-libraries:
        netcdf
    hs-source-dirs: test
test-suite test-get
    build-depends:
        hnetcdf -any,
        base >=4.3 && <5,
        containers >=0.5.5.1 && <0.6,
        errors >=1.4.7 && <1.5,
        hmatrix >=0.16.1.5 && <0.17,
        repa >=3.3.1.2 && <3.4,
        vector >=0.10.12.2 && <0.11,
        directory >=1.1,
        test-framework >=0.3,
        test-framework-hunit -any,
        test-framework-quickcheck2 >=0.3,
        HUnit -any,
        QuickCheck >=2.7.6 && <2.8
    type: exitcode-stdio-1.0
    main-is: test-get.hs
    extra-libraries:
        netcdf
    hs-source-dirs: test
test-suite test-put
    build-depends:
        hnetcdf -any,
        base >=4.3 && <5,
        containers >=0.5.5.1 && <0.6,
        errors >=1.4.7 && <1.5,
        vector >=0.10.12.2 && <0.11,
        directory >=1.1
    type: exitcode-stdio-1.0
    main-is: test-put.hs
    extra-libraries:
        netcdf
    hs-source-dirs: test
test-suite test-hmatrix
    build-depends:
        hnetcdf -any,
        base >=4.3 && <5,
        containers >=0.5.5.1 && <0.6,
        errors >=1.4.7 && <1.5,
        vector >=0.10.12.2 && <0.11,
        directory >=1.1,
        hmatrix >=0.16.1.5 && <0.17,
        test-framework >=0.3,
        test-framework-hunit -any,
        test-framework-quickcheck2 >=0.3,
        HUnit -any,
        QuickCheck >=2.7.6 && <2.8
    type: exitcode-stdio-1.0
    main-is: test-hmatrix.hs
    extra-libraries:
        netcdf
    hs-source-dirs: test
